turtleart.circlesquare.CircleSquare.scala.error
Compilation error:
CircleSquare:9: error: too many arguments for method cache: ()Unit
  cache(50)
       ^